--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 
   /* Font Family  */
   --font-1: "Nunito", sans-serif;
+
+  --transition: 0.3s ease-in-out;
+}
+
+* {
+  font-family: var(--font-1);
 }
 
 /* Common Css  */
@@ -23,6 +29,42 @@
   color: var(--light-blue) !important;
 }
 
+.text-grey {
+  color: var(--grey);
+}
+
 .bg-info {
   background-color: var(--light-blue);
+}
+
+.my-btn-1 {
+  box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
+  color: #fff;
+  border-radius: 4px;
+  padding: 11px 40px;
+  background-color: var(--light-blue);
+  border: none;
+  font-size: 1.1rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.my-btn-1 .fa-arrow-right-long {
+  transition: var(--transition);
+}
+
+.my-btn-1:hover .fa-arrow-right-long {
+  transform: translateX(5px);
+}
+
+/* Header  */
+
+.banner{
+  background: url("./images/bg-image/hero-bg.png");
+}
+
+.banner .header-content {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
